# adv-cross-reference-tool

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLIANCE_TAB_DEPLOYMENT.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FORM_D_ADV_MATCHING_SUMMARY.md  INTELLIGENCE_RADAR_IMPLEMENTATION.md  PLAN_AUTH_SYSTEM.md  PLAN_FUND_HOLDERS_INTEL.md  PLAN_PER_INDIVIDUAL_ENRICHMENT.md  PLAN_SEO_URLS.md  PORTFOLIO_COMPANIES_FEATURE.md  PRODUCT_BACKLOG.md  PROJECT_HANDOFF_COMPLETE_GUIDE.md  Procfile  README.md  SESSION_NOTES_2026-01-05_COMPLIANCE_TAB.md  SESSION_SUMMARY.md  debug_founders.py  detect_compliance_issues.js  detect_needs_adv_improved.js  features.json  package-lock.json  package.json  project_state.md  server.js  start.sh
nport/: .gitignore  HANDOFF_LIVE.md  INTEL_SERVER_PERSISTENCE.md  OPERATIONAL_GUARDRAILS.md  PLAN.md  README.md  __init__.py  conftest.py  pyproject.toml  run-intel-server.sh
nport/api/: mount.js  package.json  server.js
nport/delta_detection/: .gitignore  compute_deltas.py  db_client.py  email_alerts.py  repricing_event_detector.py
nport/frontend/: index.html  intel_page.js  nport_pages.js
nport/integration/: README.md
nport/lib/: __init__.py  edgar_index.py
nport/migrations/: 001_create_schema.sql  002_seed_sanctioned.sql  003_grant_service_role_access.sql  004_ncen_adviser_links.sql  005_intel_evidence_tables.sql  006_company_lifecycle_events.sql  007_intel_person_enrichment.sql  008_person_enrichment_v3.sql  009_formd_manager_resolution.sql  011_lock_down_rls.sql  README.md
nport/resolver/: __init__.py  aliases_seed.json  normalizer.py  resolver.py  share_class.py  spv_unwrap.py
nport/scraper/: __init__.py  backfill_bulk.py  config.py  daily_scraper.py  db_client.py  filter_f4.py  live_resolver.py  load_identifiers.py  preflight_live.py  row_mapping.py  sec_client.py
nport/scripts/: enrich_linkedins.js  witness_check.sh
nport/seed_loader/: lifecycle_flags.json  load_seed_supabase.py  manual_curated_seed.json  merge_and_emit.py  (+7 more)
(+197 files in other folders)
